--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,8 @@
 
 # Drizzle
 DATABASE_URL="postgresql://postgres:password@localhost:5432/portfolio"
-
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY="6Lc1RfgpAAAAAHvhXoTdXnnqvJMxwq-D_eNyZukE"
+RECAPTCHA_SECRET_KEY="6Lc1RfgpAAAAAO3SlzAeyP4HCwWVJmXqtJvx7DXU"
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
