--- a/package.json
+++ b/package.json
@@ -21,16 +21,17 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@sendgrid/mail": "^8.1.3",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "babel-plugin-react-compiler": "0.0.0-experimental-938cd9a-20240601",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.30.10",
     "geist": "^1.3.0",
     "lucide-react": "^0.394.0",
-    "next": "^14.2.1",
+    "next": "rc",
     "postgres": "^3.4.4",
     "posthog-js": "^1.139.1",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
+    "react": "rc",
+    "react-dom": "rc",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.51.5",
     "tailwind-merge": "^2.3.0",
