--- a/package.json
+++ b/package.json
@@ -22,17 +22,16 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@sendgrid/mail": "^8.1.3",
     "@t3-oss/env-nextjs": "^0.10.1",
-    "babel-plugin-react-compiler": "0.0.0-experimental-938cd9a-20240601",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.30.10",
     "geist": "^1.3.0",
     "lucide-react": "^0.394.0",
-    "next": "rc",
+    "next": "^14.2.4",
     "postgres": "^3.4.4",
-    "posthog-js": "^1.139.1",
-    "react": "rc",
-    "react-dom": "rc",
+    "posthog-js": "^1.139.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.51.5",
     "tailwind-merge": "^2.3.0",
@@ -40,21 +39,22 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/eslint": "^8.56.2",
-    "@types/node": "^20.11.20",
-    "@types/react": "^18.2.57",
-    "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
+    "@types/eslint": "^8.56.10",
+    "@types/node": "^20.14.2",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/parser": "^7.13.0",
     "drizzle-kit": "^0.21.4",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.3",
+    "eslint-config-next": "^14.2.4",
     "eslint-plugin-drizzle": "^0.2.3",
-    "postcss": "^8.4.34",
-    "prettier": "^3.2.5",
+    "postcss": "^8.4.38",
+    "postcss-sort-media-queries": "^5.2.0",
+    "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.2"
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.4.5"
   },
   "ct3aMetadata": {
     "initVersion": "7.34.0"
