--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "db:studio": "drizzle-kit studio",
     "dev": "next dev --turbo",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "release": "semantic-release",
+    "prepare": "husky init"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
@@ -39,6 +41,12 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^10.0.6",
+    "@semantic-release/npm": "^12.0.1",
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.14.2",
     "@types/react": "^18.3.3",
@@ -49,10 +57,12 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.4",
     "eslint-plugin-drizzle": "^0.2.3",
+    "husky": "^9.0.11",
     "postcss": "^8.4.38",
     "postcss-sort-media-queries": "^5.2.0",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.5.14",
+    "semantic-release": "^24.0.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
   },
