--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,11 +17,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - run: corepack enable
+        name: Enable Corepack
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
           node-version: 20
+          cache: 'pnpm'
 
       - name: Install dependencies
         run: pnpm install
