--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,13 @@
 # should be updated accordingly.
 
 # Drizzle
-DATABASE_URL="postgresql://postgres:password@localhost:5432/portfolio"
-NEXT_PUBLIC_RECAPTCHA_SITE_KEY="6Lc1RfgpAAAAAHvhXoTdXnnqvJMxwq-D_eNyZukE"
-RECAPTCHA_SECRET_KEY="6Lc1RfgpAAAAAO3SlzAeyP4HCwWVJmXqtJvx7DXU"
+POSTGRES_URL=""
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY=""
+SENDGRID_API_KEY=""
+RECAPTCHA_SECRET_KEY=""
+NEXT_PUBLIC_POSTHOG_KEY=""
+NEXT_PUBLIC_POSTHOG_HOST=""
+
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
