feat(eslint): add eslint-plugin-react and update ESLint config
Add eslint-plugin-react to enforce React-specific linting rules.
Update .eslintrc.cjs to include "plugin:react/recommended" in the
"extends" array and disable "react/react-in-jsx-scope" rule. This
ensures better code quality and consistency in React components.

style(components): add missing semicolons and disable prop-types rule

Add missing semicolons to various component files for consistency
and to adhere to coding standards. Disable the "react/prop-types"
rule using ESLint comments to avoid unnecessary warnings in TypeScript
files where prop types are already enforced by TypeScript.

chore(textarea.tsx): add eslint-disable comment to ignore prop-types rule

Add an eslint-disable-next-line comment to ignore the react/prop-types rule for the Textarea component. This change is necessary to prevent ESLint from flagging the absence of prop-types, as TypeScript is being used for type checking instead.

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.4",
     "eslint-plugin-drizzle": "^0.2.3",
+    "eslint-plugin-react": "^7.34.2",
     "husky": "^9.0.11",
     "postcss": "^8.4.38",
     "postcss-sort-media-queries": "^5.2.0",
