--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "semantic-release": "^24.0.0",
+    "sharp": "^0.33.4",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
   },
